# routes/api.php
@@ -26,6 +26,16 @@ Route::prefix('/v1')->namespace('Api\V1')->group(function (){
 
     Route::get('home', [\App\Http\Controllers\Api\v1\HomeApiController::class, 'home']);
 
+    Route::get('most_sold_products', [\App\Http\Controllers\Api\v1\ProductsApiController::class, 'most_sold_product']);
+    Route::get('most_viewed_products', [\App\Http\Controllers\Api\v1\ProductsApiController::class, 'most_viewed_products']);
+    Route::get('newest_products', [\App\Http\Controllers\Api\v1\ProductsApiController::class, 'newest_products']);
+    Route::get('cheapest_products', [\App\Http\Controllers\Api\v1\ProductsApiController::class, 'cheapest_product']);
+    Route::get('most_expensive_products', [\App\Http\Controllers\Api\v1\ProductsApiController::class, 'most_expensive_products']);
+    Route::get('products_by_category/{id}', [\App\Http\Controllers\Api\v1\ProductsApiController::class, 'productsByCategory']);
+    Route::get('products_by_brand/{id}', [\App\Http\Controllers\Api\v1\ProductsApiController::class, 'productsByBrand']);
+
+
+
 });
 
 Route::prefix('/v1')->namespace('Api\V1')->middleware('auth:sanctum')->group(function (){
